# NetKitX

./: .coderabbit.yaml  .gitignore  .gitmodules  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  coverage.xml  pyproject.toml  pytest.ini
backend/app/: main.py  monitor.py
backend/app/api/v1/: admin.py  ai.py  auth.py  knowledge.py  marketplace.py  passkey.py  plugin_sessions.py  plugins.py  reports.py  tasks.py  terminal.py  tools.py  topology.py  whitelist.py  workflows.py
backend/app/cli/: publish.py
backend/app/core/: config.py  database.py  deps.py  events.py  security.py  terms.py
backend/app/marketplace/: __init__.py  installer.py  resolver.py  scanner.py  version.py
backend/app/models/: __init__.py  ai_settings.py  announcement.py  audit_log.py  knowledge.py  marketplace.py  passkey.py  plugin.py  project.py  task.py  user.py  whitelist.py  workflow.py
backend/app/plugins/: base.py  engine.py  loader.py  registry.py
backend/app/schemas/: admin.py  agent.py  ai.py  auth.py  knowledge.py  marketplace.py  passkey.py  plugin.py  plugin_session.py  task.py  whitelist.py  workflow.py
backend/app/services/: admin_service.py  agent_metrics.py  agent_service.py  ai_service.py  auth_service.py  container_service.py  embedding_service.py  knowledge_service.py  passkey_service.py  plugin_service.py  report_service.py  sandbox.py  session_plugin_service.py  task_service.py  topology_service.py  whitelist_service.py  workflow_service.py
backend/app/templates/: report.html
backend/app/workers/: celery_app.py  task_worker.py
backend/data/dicts/backup/: extensions.txt
backend/data/dicts/directory/: common.txt
backend/data/dicts/password/: common.txt
backend/data/dicts/subdomain/: common.txt
backend/migrations/: env.py
backend/migrations/versions/: 05a264c05b59_add_github_id_and_avatar_url_to_users.py  27e85a258187_add_marketplace_tables.py  3f9c2b4d8e1a_add_marketplace_reports.py  5a1c3e7f9b2d_add_ai_settings.py  a7e4c1d2f8b3_add_learning_report_to_knowledge.py  b9c3d5e7f1a2_add_embedding_column_to_knowledge.py  bb1101b74fbc_add_base_url_to_ai_settings.py  c4d8e9f1a2b3_add_workflows_table.py  c9080a6e0993_add_audit_logs_announcements_and_user_.py  ede43b37ca8c_add_terms_accepted_at_to_users.py  f1ea177f7f63_add_authorized_targets_table.py  f3f5e12ef17e_add_passkey_credentials_table.py  fa32867a3dff_add_knowledge_tables.py
backend/tests/: conftest.py  test_admin.py  test_agent.py  test_agent_metrics.py  test_health.py  test_installer.py  test_knowledge.py  test_marketplace.py  test_plugin_session.py  test_publish.py  test_registry.py  test_reports.py  test_resolver.py  test_scanner.py  test_topology.py  test_verified.py  test_version.py  test_whitelist.py  test_workflows.py
cli/: README.md  netkitx  pyproject.toml
cli/netkitx_cli/: __init__.py
deploy/: deploy.sh  netkitx.conf
docs/: architecture.md  ci-cd.md  marketplace-usage.md  plugin-development.md  plugin-ecosystem-architecture.md  plugin-engine-v2-design.md  plugin-engine-v2-roadmap.md  plugin-marketplace-design.md  rag-architecture.md  rag-system.md  roadmap.md  sandbox-terminal-plan.md  system-overview.md  tools-roadmap.md
engines/: Makefile  go.mod
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
plugins/backup_scan/: main.py  plugin.yaml
plugins/brute_force/: main.py  plugin.yaml
plugins/dir_scan/: main.py  plugin.yaml
plugins/dns_lookup/: main.py  plugin.yaml
plugins/example_ping/: main.py  plugin.yaml
plugins/example_portscan/: plugin.yaml
plugins/file_upload/: main.py  plugin.yaml
plugins/git_leak/: main.py  plugin.yaml
plugins/hg_leak/: main.py  plugin.yaml
plugins/http_request/: main.py  plugin.yaml
plugins/sql_inject/: main.py  (+1 more)
sandbox/: Dockerfile  entrypoint.sh
scripts/: README.md  backup-db.sh  deploy.sh  logs.sh  restart.sh  start.sh  status.sh  stop.sh
sdk/: README.md  pyproject.toml
sdk/netkitx_sdk/: __init__.py  base.py  testing.py
sdk/tests/: test_sdk.py
(+186 files in other folders)
