[project]
name = "netkitx-backend"
version = "0.1.0"
description = "NetKitX - Extensible Network Security Toolkit API"
requires-python = ">=3.11"

dependencies = [
    "netkitx-sdk>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "alembic>=1.14.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.22",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "dnspython>=2.6.0",
    "asyncssh>=2.17.0",
    "aioftp>=0.22.0",
    "cryptography>=43.0.0",
    "docker>=7.0.0",
    "psutil>=5.9.0",
    "webauthn>=2.7.0",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
