[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netkitx-sdk"
version = "0.1.0"
description = "SDK for developing NetKitX plugins"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["netkitx", "plugin", "sdk", "security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
testing = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/Cass-ette/NetKitX"
Documentation = "http://wql.me/developers"
Repository = "https://github.com/Cass-ette/NetKitX"

[tool.setuptools.packages.find]
where = ["."]
include = ["netkitx_sdk*"]
